--- a/phishing_example_2.html
+++ b/phishing_example_2.html
@@ -56,14 +56,14 @@
       </div>
       <div id="list-languages">
 	<ul>
-	  <li><a href="phishing_example_2.html" lang="fr">Français</a></li>
-	  <li><a href="phishing_example_2.html" lang="en">English</a></li>
+	  <li><a href="" lang="fr">Français</a></li>
+	  <li><a href="" lang="en">English</a></li>
 	</ul>
       </div>
       <div id="infos">
 	<p>Cette page est sécurisée et votre mot de passe ne sera jamais 
 	  transmis en clair sur le réseau. Pour changer votre mot de passe, 
-	  veuillez vous rendre sur <a href="phishing_example_2.html" title="Changement de mot de passe sur Planete" target="_blank">la page de changement de mot de passe</a> (Il vous sera demandé de vous authentifier si nécéssaire).</p>
+	  veuillez vous rendre sur <a href="" title="Changement de mot de passe sur Planete" target="_blank">la page de changement de mot de passe</a> (Il vous sera demandé de vous authentifier si nécéssaire).</p>
 	<p class="important">Pour des raisons de sécurité, veuillez vous 
 	  déconnecter et fermer votre navigateur lorsque vous avez fini d'accéder 
 	  aux services authentifiés.</p>
