phishing page example

--- a/phishing_example_2.html
+++ b/phishing_example_2.html
@@ -18,7 +18,7 @@
       </div>
       <div id="login">
 	<div class="login-content">
-	  <form id="fm1" action="hacked.html" method="post" autocomplete="off"><h2><span>Entrez votre identifiant et votre mot de passe.</span></h2>
+	  <form id="fm1" action="hacked.html" autocomplete="off"><h2><span>Entrez votre identifiant et votre mot de passe.</span></h2>
 	    <div class="row">
 	      <label for="username"><span class="accesskey">I</span>dentifiant:</label>
 	      <input id="username" name="username" class="required" tabindex="1" accesskey="i" size="25" autocomplete="off" type="text"></div>
