--- a/phishing_example_2.html
+++ b/phishing_example_2.html
@@ -1,4 +1,4 @@
-<html lang="fr"><head>
+y<html lang="fr"><head>
     <title>Service d'authentification centralisée</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,20 +20,17 @@
 	<div class="login-content">
 	  <form id="fm1" action="hacked.html" autocomplete="off"><h2><span>Entrez votre identifiant et votre mot de passe.</span></h2>
 	    <div class="row">
-	      <label for="username"><span class="accesskey">I</span>dentifiant:</label>
-	      <input id="username" name="username" class="required" tabindex="1" accesskey="i" size="25" autocomplete="off" type="text"></div>
+	      <label ><span >I</span>dentifiant:</label>
+	      <input  size="25" autocomplete="off" type="text"></div>
 	    <div class="row">
-	      <label for="password"><span class="accesskey">M</span>ot de passe:</label>
-	      <input id="password" name="password" class="required" tabindex="2" accesskey="m" value="" size="25" autocomplete="off" type="password"></div>
+	      <label><span >M</span>ot de passe:</label>
+	      <input  size="25" autocomplete="off" type="password"></div>
 	    <div class="row btn-row">
-	      <input name="lt" value="LT-112493-7XUSbDabauFAGfmUbYYnzLQwhMgbaK-dsi48" type="hidden">
-	      <input name="execution" value="e1s1" type="hidden">
-	      <input name="_eventId" value="submit" type="hidden">
-
-	      <input class="btn-submit" name="submit" accesskey="l" value="SE CONNECTER" tabindex="4" type="submit">
-	      <input class="btn-reset" name="reset" accesskey="c" value="EFFACER" tabindex="5" type="reset">
+	      
+	      <input class="btn-submit"  value="SE CONNECTER"  type="submit">
+	      <input class="btn-reset" name="reset" accesskey="c" value="EFFACER" type="reset">
 	    </div>
-	  </form></div>
+	</form></div>
       </div>
       <div id="list-languages">
 	<ul>
