phishing page example

--- a/phishing_example_2.html
+++ b/phishing_example_2.html
@@ -1,4 +1,4 @@
-y<html lang="fr"><head>
+<html lang="fr"><head>
     <title>Service d'authentification centralisée</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
