--- a/phishing_example.html
+++ b/phishing_example.html
@@ -9,7 +9,7 @@
 	      <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="phishing_example_files/zimbra.css" type="text/css">
 		</head>
-		<body>y
+		<body>
 		  <div id="main-container">
 		    <div class="logo">
 		      <h1>Outils de Collaboration</h1>
